# juicer

./: .dockerignore  .gitignore  .pylintrc  .travis.yml  Dockerfile  IO.py  README.md  addresser.py  babel.cfg  entrypoint.sh  featuretools.txt  featuretools_code.txt  generated_code.py  infile.csv  io.py  io_workflow.py  juicer.yaml  juicer_app_1_1_23.py  logging_config.ini  main.py  metadata.py  operation.py  pyproject.toml  requirements-tensorflow.txt  requirements.txt  test_code.py  workflow.json  workflow.py  workflow_v1.json  workflow_v2.json
airflow/: airflow.cfg  airflow.db  standalone_admin_password.txt
airflow/dags/: dag_36.py  dag_generator.py  script_api.py  workflow_dag.py  (+2 more)
conf/: juicer-config.yaml.template
dags/: dag_36.py
docs/: async_communication.md
examples/: workflow.json  workflow_v10_join.json  workflow_v11_postIBGE.json  workflow_v12_postLatLong.json  workflow_v13_postData.json  workflow_v14_transformation.json  workflow_v15_transformation_expression.json  workflow_v16_transformation.json  workflow_v17_select.json  workflow_v18_aggregation.json  workflow_v19_filter.json  workflow_v2.json  workflow_v3.json  workflow_v4.json  workflow_v5.json  workflow_v6.json  workflow_v7.json  workflow_v8.json  workflow_v9_compss.json
juicer/: app.py  auditing.py  exceptions.py  executor.py  jinja2_custom.py  operation.py  traceability.py  transpiler.py
sbin/: juicer-daemon.sh
templates/: dag_template.tmpl  dag_template02.tmpl
tests/: .coveragerc  __init__.py  conftest.py  test_operations.py  test_util.py
workflows/: 742.py  workflow_702.py
(+403 files in other folders)
