[project]
name = "juicer"
version = "2.4.0"
description = "Lemonade execution agents"
readme = "README.md"
requires-python = ">=3.7.2"
dependencies = [
    "autopep8==2.0.1",
    "Babel==2.11.0",
    "coverage==7.0.3",
    "datasketch==1.5.8",
    "duckdb==0.6.1",
    "Faker==15.3.4",
    "gensim==4.2.0",
    "GitPython==3.1.30",
    "graphviz==0.20.1",
    "Jinja2==3.1.5",
    "kubernetes==25.3.0",
    "lifelines==0.27.4",
    "matplotlib==3.5.3",
    "mock==5.0.0",
    "mockredispy==2.9.3",
    "modin[dask]==0.10.2",
    "networkx==2.6.3",
    "nltk==3.8.1",
    "numpy==1.21.6",
    "pandas==1.3.2",
    "pandasql==0.7.3",
    "pep8==1.7.1",
    "Pillow==9.4.0",
    "plotly==5.11.0",
    "polars-lts-cpu==0.18.4",
    "prefixspan==0.5.2",
    "py4j==0.10.9.7",
    "pyaml==21.10.1",
    "pyarrow==10.0.1",
    "pyfpgrowth==1.0",
    "pyinotify==0.9.6",
    "pylint==2.15.9",
    "PyMySQL==1.0.2",
    "pyparsing==3.0.9",
    "Pyqtree==1.0.0",
    "pytest-cov==4.0.0",
    "pytest-html==3.2.0",
    "pytest==7.2.0",
    "python-dotenv==0.21.1",
    "python-socketio==5.7.2",
    "pytz>=2025.1",
    "PyYAML==6.0",
    "redis==4.4.0",
    "requests==2.28.1",
    "RestrictedPython==6.0",
    "rq==1.11.1",
    "scikit-learn==1.0.2",
    "scipy==1.7.3",
    "seaborn==0.12.2",
    "simplejson==3.18.1",
    # "spacy==3.8.2", # NLP is not working
    "sqlglot==25.0.3",
    "tabulate==0.9.0",
    "termcolor==2.2.0",
    "wordsegment==1.3.1",
]
